# SlopeSniper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCTION_CHECKLIST.md  README.md  githubproducworkflow.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  contribution-handler.yml  discord-notify.yml  docs.yml  publish.yml  release.yml
config/: callback.json  integrity.json  jup.json
docs/: MOLTBOT_COMPATIBILITY.md  api.md  contributing.md  index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/security/: known-safe.md  policy.md  two-step-swaps.md
docs/tools/: check-token.md  configure-rpc.md  export-wallet.md  get-price.md  get-wallet.md  overview.md  quote.md  search-token.md  swap-confirm.md
mcp-extension/: .gitignore  .mcpbignore  AI_CONTRIBUTION_POLICY.md  COWORK.md  Dockerfile  GETTING_STARTED.md  README.md  deploy.sh  docker-compose.yml  install.sh  manifest.json  pyproject.toml
mcp-extension/server/: __init__.py  main.py
mcp-extension/server/slopesniper_skill/: __init__.py
mcp-extension/server/slopesniper_skill/sdk/: jupiter_data_client.py
mcp-extension/src/slopesniper_api/: __init__.py  server.py
mcp-extension/src/slopesniper_mcp/: __init__.py  server.py
mcp-extension/src/slopesniper_skill/: SKILL.md  __init__.py  cli.py  daemon.py  integrity.py
mcp-extension/src/slopesniper_skill/sdk/: __init__.py  dexscreener_client.py  jupiter_data_client.py  jupiter_ultra_client.py  pumpfun_client.py  rugcheck_client.py  utils.py
mcp-extension/src/slopesniper_skill/tools/: __init__.py  config.py  intents.py  onboarding.py  policy.py  scanner.py  solana_tools.py  strategies.py  targets.py
scripts/: encode-github-token.py  encode_token.py  migrate-to-main-repo.sh
skills/: README.md  install.sh
skills/slopesniper/: SKILL.md
src/slopesniper_skill/: __init__.py
src/slopesniper_skill/sdk/: __init__.py  jupiter_data_client.py  jupiter_ultra_client.py  rugcheck_client.py  utils.py
src/slopesniper_skill/tools/: __init__.py  config.py  policy.py  solana_tools.py
tests/: __init__.py  test_config.py  test_intents.py  test_policy.py
