[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopesniper-skill"
version = "0.1.0"
description = "Safe Solana token trading skill for Claude Code with policy-enforced two-step swaps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SlopeSniper", email = "dev@slopesniper.io" }
]
keywords = [
    "solana",
    "trading",
    "jupiter",
    "claude-code",
    "skill",
    "defi",
    "swap",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9.0",
    "solders>=0.21.0",
    "base58>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/slopesniper/slopesniper-skill"
Documentation = "https://slopesniper.github.io/slopesniper-skill"
Repository = "https://github.com/slopesniper/slopesniper-skill"
Issues = "https://github.com/slopesniper/slopesniper-skill/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/slopesniper_skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["slopesniper_skill"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
