[project]
name = "slopesniper-mcp"
version = "0.1.0"
description = "SlopeSniper MCP Server - Safe Solana Token Trading"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "solders>=0.21.0",
    "base58>=2.1.0",
]

[project.scripts]
slopesniper-mcp = "slopesniper_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slopesniper_mcp", "src/slopesniper_skill"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
